--- a/cons2db.csproj
+++ b/cons2db.csproj
@@ -37,15 +37,19 @@
       <HintPath>..\..\..\..\usr\lib\mono\4.0\Npgsql.dll</HintPath>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="db\ConsumptionDbAccess.cs" />
     <Compile Include="db\ConsumptionDbAccessPostgre.cs" />
+    <Compile Include="ConsumptionDataReader\ConsumptionDataReader.cs" />
+    <Compile Include="ConsumptionDataReader\ConsumptionDataReaderVnStatXml.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Folder Include="db\" />
+    <Folder Include="ConsumptionDataReader\" />
   </ItemGroup>
 </Project>
