--- a/cons2db.csproj
+++ b/cons2db.csproj
@@ -42,10 +42,10 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="db\ConsumptionDbAccess.cs" />
-    <Compile Include="db\ConsumptionDbAccessPostgre.cs" />
     <Compile Include="ConsumptionDataReader\ConsumptionDataReader.cs" />
     <Compile Include="ConsumptionDataReader\ConsumptionDataReaderVnStatXml.cs" />
+    <Compile Include="db\ConsumptionDataDbAccess.cs" />
+    <Compile Include="db\ConsumptionDataDbAccessPostgre.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
