Added Util.Xml; beginning of ConsumptionDataReaderVnStatXml::ProcessInputData

--- a/cons2db.csproj
+++ b/cons2db.csproj
@@ -46,10 +46,12 @@
     <Compile Include="ConsumptionDataReader\ConsumptionDataReaderVnStatXml.cs" />
     <Compile Include="db\ConsumptionDataDbAccess.cs" />
     <Compile Include="db\ConsumptionDataDbAccessPostgre.cs" />
+    <Compile Include="Util\Xml.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Folder Include="db\" />
     <Folder Include="ConsumptionDataReader\" />
+    <Folder Include="Util\" />
   </ItemGroup>
 </Project>
