--- a/cons2db.csproj
+++ b/cons2db.csproj
@@ -60,5 +60,6 @@
     <None Include="sql\pgsql\devices.sql" />
     <None Include="sql\pgsql\systems.sql" />
     <None Include="sql\pgsql\consumption_data.sql" />
+    <None Include="README.md" />
   </ItemGroup>
 </Project>
